[gd_scene load_steps=14 format=2]

[ext_resource path="res://Apple.tscn" type="PackedScene" id=1]
[ext_resource path="res://Spikes.png" type="Texture" id=2]
[ext_resource path="res://Grass.png" type="Texture" id=3]
[ext_resource path="res://Player.png" type="Texture" id=4]
[ext_resource path="res://Background.png" type="Texture" id=5]
[ext_resource path="res://Dirt.png" type="Texture" id=6]
[ext_resource path="res://Level1.gd" type="Script" id=7]
[ext_resource path="res://Player.gd" type="Script" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=3]
0/name = "Grass.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
2/name = "Dirt.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 2 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 8, 16, 8 )

[sub_resource type="TileSet" id=5]
0/name = "Spikes.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Level1" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 384, 240 )
texture = ExtResource( 5 )

[node name="Score" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 22.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655382, 2, 0, 655383, 2, 0, 655384, 2, 0, 655385, 2, 0, 655390, 2, 0, 655391, 2, 0, 655392, 2, 0, 655393, 2, 0, 655397, 2, 0, 655398, 2, 0, 655399, 2, 0, 655400, 2, 0, 655401, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720926, 2, 0, 720927, 2, 0, 720928, 2, 0, 720929, 2, 0, 720933, 2, 0, 720934, 2, 0, 720935, 2, 0, 720936, 2, 0, 720937, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 2, 0, 786457, 2, 0, 786462, 2, 0, 786463, 2, 0, 786464, 2, 0, 786465, 2, 0, 786469, 2, 0, 786470, 2, 0, 786471, 2, 0, 786472, 2, 0, 786473, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 2, 0, 851991, 2, 0, 851992, 2, 0, 851993, 2, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 2, 0, 851999, 2, 0, 852000, 2, 0, 852001, 2, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 2, 0, 852006, 2, 0, 852007, 2, 0, 852008, 2, 0, 852009, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 917528, 2, 0, 917529, 2, 0, 917530, 2, 0, 917531, 2, 0, 917532, 2, 0, 917533, 2, 0, 917534, 2, 0, 917535, 2, 0, 917536, 2, 0, 917537, 2, 0, 917538, 2, 0, 917539, 2, 0, 917540, 2, 0, 917541, 2, 0, 917542, 2, 0, 917543, 2, 0, 917544, 2, 0, 917545, 2, 0, 983040, 2, 0, 983041, 2, 0, 983042, 2, 0, 983043, 2, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 2, 0, 983050, 2, 0, 983051, 2, 0, 983052, 2, 0, 983053, 2, 0, 983054, 2, 0, 983055, 2, 0, 983056, 2, 0, 983057, 2, 0, 983058, 2, 0, 983059, 2, 0, 983060, 2, 0, 983061, 2, 0, 983062, 2, 0, 983063, 2, 0, 983064, 2, 0, 983065, 2, 0, 983066, 2, 0, 983067, 2, 0, 983068, 2, 0, 983069, 2, 0, 983070, 2, 0, 983071, 2, 0, 983072, 2, 0, 983073, 2, 0, 983074, 2, 0, 983075, 2, 0, 983076, 2, 0, 983077, 2, 0, 983078, 2, 0, 983079, 2, 0, 983080, 2, 0, 983081, 2, 0, 1048576, 2, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 2, 0, 1048585, 2, 0, 1048586, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 2, 0, 1048594, 2, 0, 1048595, 2, 0, 1048596, 2, 0, 1048597, 2, 0, 1048598, 2, 0, 1048599, 2, 0, 1048600, 2, 0, 1048601, 2, 0, 1048602, 2, 0, 1048603, 2, 0, 1048604, 2, 0, 1048605, 2, 0, 1048606, 2, 0, 1048607, 2, 0, 1048608, 2, 0, 1048609, 2, 0, 1048610, 2, 0, 1048611, 2, 0, 1048612, 2, 0, 1048613, 2, 0, 1048614, 2, 0, 1048615, 2, 0, 1048616, 2, 0, 1048617, 2, 0, 1441830, 0, 0, 1441831, 0, 0, 1441832, 0, 0, 1441833, 0, 0, 1441834, 0, 0, 1441835, 0, 0, 1441836, 0, 0, 1507366, 2, 0, 1507367, 2, 0, 1507368, 2, 0, 1507369, 2, 0, 1507370, 2, 0, 1507371, 2, 0, 1507372, 2, 0, 1572902, 2, 0, 1572903, 2, 0, 1572904, 2, 0, 1572905, 2, 0, 1572906, 2, 0, 1572907, 2, 0, 1572908, 2, 0, 1638438, 2, 0, 1638439, 2, 0, 1638440, 2, 0, 1638441, 2, 0, 1638442, 2, 0, 1638443, 2, 0, 1638444, 2, 0 )

[node name="Border" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327681, 2, 0, -393168, 2, 0, -262145, 2, 0, -327632, 2, 0, -196609, 2, 0, -262096, 2, 0, -131073, 2, 0, -196560, 2, 0, -65537, 2, 0, -131024, 2, 0, -1, 2, 0, -65488, 2, 0, 65535, 2, 0, 48, 2, 0, 131071, 2, 0, 65584, 2, 0, 196607, 2, 0, 131120, 2, 0, 262143, 2, 0, 196656, 2, 0, 327679, 2, 0, 262192, 2, 0, 393215, 2, 0, 327728, 2, 0, 458751, 2, 0, 393264, 2, 0, 524287, 2, 0, 458800, 2, 0, 589823, 2, 0, 524336, 2, 0, 655359, 2, 0, 589872, 2, 0, 720895, 2, 0, 655408, 2, 0, 786431, 2, 0, 720944, 2, 0, 851967, 2, 0, 786480, 2, 0, 917503, 2, 0, 852016, 2, 0, 983039, 2, 0, 917552, 2, 0, 1048575, 2, 0, 983088, 2, 0, 1114111, 2, 0, 1048624, 2, 0, 1179647, 2, 0, 1114160, 2, 0, 1245183, 2, 0, 1179696, 2, 0, 1310719, 2, 0, 1245232, 2, 0, 1376255, 2, 0, 1310768, 2, 0, 1441791, 2, 0, 1376304, 2, 0, 1507327, 2, 0, 1441840, 2, 0, 1572863, 2, 0, 1507376, 2, 0, 1638399, 2, 0, 1572912, 2, 0, 1703935, 2, 0, 1638448, 2, 0, 1769471, 2, 0, 1703984, 2, 0, 1835007, 2, 0, 1769520, 2, 0, 1900543, 2, 0, 1835056, 2, 0, 1966079, 2, 0, 1900592, 2, 0, 2031615, 2, 0, 1966128, 2, 0, 2097151, 2, 0, 2031664, 2, 0 )

[node name="Killers" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 524301, 0, 0, 524302, 0, 0, 524327, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 1376298, 0, 0, 1376299, 0, 0, 1376300, 0, 0, 2031616, 0, 0, 2031617, 0, 0, 2031618, 0, 0, 2031619, 0, 0, 2031620, 0, 0, 2031621, 0, 0, 2031622, 0, 0, 2031623, 0, 0, 2031624, 0, 0, 2031625, 0, 0, 2031626, 0, 0, 2031627, 0, 0, 2031628, 0, 0, 2031629, 0, 0, 2031630, 0, 0, 2031631, 0, 0, 2031632, 0, 0, 2031633, 0, 0, 2031634, 0, 0, 2031635, 0, 0, 2031636, 0, 0, 2031637, 0, 0, 2031638, 0, 0, 2031639, 0, 0, 2031640, 0, 0, 2031641, 0, 0, 2031642, 0, 0, 2031643, 0, 0, 2031644, 0, 0, 2031645, 0, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031649, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031652, 0, 0, 2031653, 0, 0, 2031654, 0, 0, 2031655, 0, 0, 2031656, 0, 0, 2031657, 0, 0, 2031658, 0, 0, 2031659, 0, 0, 2031660, 0, 0, 2031661, 0, 0, 2031662, 0, 0, 2031663, 0, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 58.1338, 118.292 )
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
position = Vector2( -73.2666, -121.971 )
polygon = PoolVector2Array( 69.6457, 114.351, 78.8956, 114.246, 83.2052, 118.503, 84.2563, 126.492, 80.262, 130.801, 66.5975, 131.116, 61.3419, 127.858, 63.7069, 118.976 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 4 )

[node name="Apple2" parent="." instance=ExtResource( 1 )]
position = Vector2( 696, 312 )
type = 1

[node name="Apple3" parent="." instance=ExtResource( 1 )]
position = Vector2( 440, 104 )
type = 2

[node name="Apple4" parent="." instance=ExtResource( 1 )]
position = Vector2( 568, 112 )

[node name="Apple5" parent="." instance=ExtResource( 1 )]
position = Vector2( 312, 104 )
type = 2

[node name="Apple" parent="." instance=ExtResource( 1 )]
position = Vector2( 144, 104 )

[node name="Apple6" parent="." instance=ExtResource( 1 )]
position = Vector2( 640, 320 )
type = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_right = 136.0
margin_bottom = 40.0
rect_scale = Vector2( 0.75, 0.75 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 193.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 89.0
margin_bottom = 15.0
text = "Jump strength"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_left = 93.0
margin_right = 193.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = 1.0
max_value = 500.0
value = 175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 193.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 15.0
text = "gravity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 46.0
margin_right = 146.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = 1.0
max_value = 15.0
value = 7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 193.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 79.0
margin_bottom = 15.0
text = "move speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer3"]
margin_left = 83.0
margin_right = 183.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = 50.0
max_value = 200.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/HSlider" to="." method="_on_HSlider3_value_changed"]
